; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_raid10.c_raid10_takeover.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_raid10.c_raid10_takeover.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mddev = type { i64, %struct.r0conf* }
%struct.r0conf = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@.str = private unnamed_addr constant [63 x i8] c"md/raid10:%s: cannot takeover raid 0 with more than one zone.\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.mddev*)* @raid10_takeover to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @raid10_takeover(%struct.mddev* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.mddev*, align 8
  %4 = alloca %struct.r0conf*, align 8
  store %struct.mddev* %0, %struct.mddev** %3, align 8
  %5 = load %struct.mddev*, %struct.mddev** %3, align 8
  %6 = getelementptr inbounds %struct.mddev, %struct.mddev* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %37

9:                                                ; preds = %1
  %10 = load %struct.mddev*, %struct.mddev** %3, align 8
  %11 = getelementptr inbounds %struct.mddev, %struct.mddev* %10, i32 0, i32 1
  %12 = load %struct.r0conf*, %struct.r0conf** %11, align 8
  store %struct.r0conf* %12, %struct.r0conf** %4, align 8
  %13 = load %struct.r0conf*, %struct.r0conf** %4, align 8
  %14 = getelementptr inbounds %struct.r0conf, %struct.r0conf* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp sgt i32 %15, 1
  br i1 %16, label %17, label %24

17:                                               ; preds = %9
  %18 = load %struct.mddev*, %struct.mddev** %3, align 8
  %19 = call i32 @mdname(%struct.mddev* %18)
  %20 = call i32 @pr_warn(i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str, i64 0, i64 0), i32 %19)
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  %23 = call i8* @ERR_PTR(i32 %22)
  store i8* %23, i8** %2, align 8
  br label %41

24:                                               ; preds = %9
  %25 = load %struct.mddev*, %struct.mddev** %3, align 8
  %26 = load %struct.r0conf*, %struct.r0conf** %4, align 8
  %27 = getelementptr inbounds %struct.r0conf, %struct.r0conf* %26, i32 0, i32 1
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.r0conf*, %struct.r0conf** %4, align 8
  %32 = getelementptr inbounds %struct.r0conf, %struct.r0conf* %31, i32 0, i32 1
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i8* @raid10_takeover_raid0(%struct.mddev* %25, i32 %30, i32 %35)
  store i8* %36, i8** %2, align 8
  br label %41

37:                                               ; preds = %1
  %38 = load i32, i32* @EINVAL, align 4
  %39 = sub nsw i32 0, %38
  %40 = call i8* @ERR_PTR(i32 %39)
  store i8* %40, i8** %2, align 8
  br label %41

41:                                               ; preds = %37, %24, %17
  %42 = load i8*, i8** %2, align 8
  ret i8* %42
}

declare dso_local i32 @pr_warn(i8*, i32) #1

declare dso_local i32 @mdname(%struct.mddev*) #1

declare dso_local i8* @ERR_PTR(i32) #1

declare dso_local i8* @raid10_takeover_raid0(%struct.mddev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
